# hellopat-challenge

./: .gitignore  Makefile  README.md
backend/: .env.example  .pylintrc  db_engine.py  main.py  nohup.out  pyproject.toml  seed.py
backend/hellopatient/: config.py
backend/hellopatient/chat/: chat_history_service.py  models.py  router.py  schmea.py  service.py
backend/hellopatient/llm_integrations/: llm_factory.py  openai_integration.py
frontend/: nohup.out  package-lock.json  package.json
frontend/app/: page.tsx
